Add photos and about me

--- a/index.html
+++ b/index.html
@@ -1,185 +1,119 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="style.css" />
+  <title>Tomer web</title>
+  <link rel=“stylesheet” type=“text/css”  href="style.css" />
+  <style>
+    .myImg{
+      width:42px;
+      height:42px;
+    }
+    h1{
+      color: black;
+      text-align: center;
+      border-bottom: 5px solid cyan;
+      line-height: 0.1em;
+    }
+    h1 span{
+      background: white;
+      padding: 10px;
+    }
+    ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      background-color: cyan;
+      position: fixed;
+      top: 0;
+      width: 100%;
+    }.logo-image{position: fixed;}
+    li {
+      display: inline;
+      float: right;
+      text-align: center;
+      padding: 14px 16px;
+      border-right: 1px solid white;
+    }
+    a {
+      display: white;
+      padding: 10px;
+      background-color: cyan;
+    }
+    li a:hover {
+      display: cyan;
+      color: white;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+    }.active {
+       background-color: #4CAF50;
+    }
+    </style>
 </head>
 <body>
-<div id="menu">
-<li><a href="#about">About Me</a></li>
-<li><a href="#photos">My Photos</a></li>
-<li><a href="#playlist">My Playlist</a></li>
-<li><a href="#like">Like</a></li>
-<li><a href="#qrcoder">QR code</a></li>
-<li><a href="#spa">Q&A</a></li>
-<li><a href="#contact">Contact Me</a></li>
-</div>
+  <div id="menu">
+    <img width="65" height="65" src="https://cdnmd.lavoz.com.ar/sites/default/files/styles/box_128/public/nota_periodistica/guillermo-vilas3jpg_1603972670.jpg">
+    <ul>
+      <li><a href="#about">About Me</a></li>
+      <li><a href="#photos">My Photos</a></li>
+      <li><a href="#playlist">My Playlist</a></li>
+      <li><a href="#like">Like</a></li>
+      <li><a href="#qrcoder">QR code</a></li>
+      <li><a href="#spa">Q&A</a></li>
+      <li><a href="#contact">Contact Me</a></li>
+    </ul>
+  </div>
 		  
-<section id="about" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-about me
-<br/>
-<br/>
-<br/>
-</section>
+  <section id="about" class="section">    
+    <h1><span>About Me</span></h1>
+    <p class="aboutClass">Guillermo Vilas born 17 August 1952, is an Argentine former professional tennis player, who won four Grand Slam tournaments, one year-end Masters, nine Grand Prix Super Series titles and 62 total ATP titles.
+      <br>He was inducted into the International Tennis Hall of Fame in 1991, two years after his first retirement.<br><br>
+      Historical and statistical studies presented in 2015 by Argentinian journalist Eduardo Puppo and Romanian mathematician Marian Ciulpan concluded that Vilas should have been No. 1 in the old ATP ranking system for seven weeks between 1975 and 1976.
+      The ATP Tour and its chief executive at that time, Chris Kermode, although not refuting the data, decided not to officially recognize Vilas.
+       The controversy is still in the legal stage. In October 2020, Netflix released a documentary film about the Vilas case titled "Guillermo Vilas: Settling the Score"</p>
+  </section>
 
-<section id="photos" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-my photos
-<br/>
-<br/>
-<br/>
-</section>
+  <br/><br/><br/>
+  <section id="photos" class="section">    
+    <h1><span>photos</span></h1>
+  </section>
+  <img width="200" height="150" src="https://www.tennisworldusa.org/imgb/91848/tennis-legend-guillermo-vilas-reported-to-be-suffering-from-alzheimer-s-disease.jpg">
+  <img width="200" height="150" src="https://i1.wp.com/dl.img-news.com/dl/img/s4/dl/2020/05/Nadal-and-a-fundamental-advice-from-Guillermo-Vilas-before-his.img.jpeg?fit=%2C&ssl=1">
+  <img width="200" height="150" src="https://www.onthisday.com/images/people/guillermo-vilas-medium.jpg">
+  <img width="200" height="150" src="https://i.pinimg.com/originals/cc/f8/34/ccf834b1b0b04a17816aab789a43b933.jpg">
+  <img width="200" height="150" src="https://i2.wp.com/d35hsl9am8s2ta.cloudfront.net/public/images/2021/01/16100483510-vilas-773x458.png?w=800&resize=800%2C&ssl=1">
 
-<section id="playlist" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-my playlist
-<br/>
-<br/>
-<br/>
-</section>
+  <br/><br/><br/>
+  <section id="playlist" class="section">    
+    <h1><span>my playlist</span></h1>
+  </section>
 
-<section id="like" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-give me a like
-<br/>
-<br/>
-<br/>
-</section>
+  <br/><br/><br/>
+  <section id="like" class="section">    
+    <h1><span>give me a like</span></h1>
+  </section>
 
-<section id="qrcoder" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-scan my code
-<br/>
-<br/>
-<br/>
-</section>
+  <br/><br/><br/>
+  <section id="qrcoder" class="section">    
+    <h1><span>scan my code</span></h1>
+  </section>
 
-<section id="spa" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-ans
-<br/>
-<br/>
-<br/>
-</section>
+  <br/><br/><br/>
+  <section id="spa" class="section">    
+    <h1><span>ans</span></h1>
+  </section>
 
-<section id="contact" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-contact me
-<br/>
-<br/>
-<br/>
-</section>
-
+  <br/><br/><br/>
+  <section id="contact" class="section">    
+    <h1><span>contact me</span></h1>
+  </section>
+  <br/><br/><br/>
 
 <script type="text/javascript">
 $(function(){
   $("#nav a").click(function(e){
-    e.preventDefault();
+    e.preventDefanavt();
     $('html,body').scrollTo(this.hash,this.hash); 
   });
 });
