Add youtube link

--- a/index.html
+++ b/index.html
@@ -4,10 +4,6 @@
   <title>Tomer web</title>
   <link rel=“stylesheet” type=“text/css”  href="style.css" />
   <style>
-    .myImg{
-      width:42px;
-      height:42px;
-    }
     h1{
       color: black;
       text-align: center;
@@ -55,13 +51,13 @@
   <div id="menu">
     <img width="65" height="65" src="https://cdnmd.lavoz.com.ar/sites/default/files/styles/box_128/public/nota_periodistica/guillermo-vilas3jpg_1603972670.jpg">
     <ul>
-      <li><a href="#about">About Me</a></li>
-      <li><a href="#photos">My Photos</a></li>
-      <li><a href="#playlist">My Playlist</a></li>
-      <li><a href="#like">Like</a></li>
-      <li><a href="#qrcoder">QR code</a></li>
-      <li><a href="#spa">Q&A</a></li>
       <li><a href="#contact">Contact Me</a></li>
+      <li><a href="#spa">Q&A</a></li>
+      <li><a href="#qrcoder">QR code</a></li>
+      <li><a href="#like">Like</a></li>
+      <li><a href="#highlights">My Highlights</a></li>
+      <li><a href="#photos">My Photos</a></li>
+      <li><a href="#about">About Me</a></li>        
     </ul>
   </div>
 		  
@@ -85,9 +81,10 @@
   <img width="200" height="150" src="https://i2.wp.com/d35hsl9am8s2ta.cloudfront.net/public/images/2021/01/16100483510-vilas-773x458.png?w=800&resize=800%2C&ssl=1">
 
   <br/><br/><br/>
-  <section id="playlist" class="section">    
-    <h1><span>my playlist</span></h1>
+  <section id="highlights" class="section">    
+    <h1><span>my Highlights</span></h1>
   </section>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/x-EqoIZ1MrE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
   <br/><br/><br/>
   <section id="like" class="section">    
