--- a/index.html
+++ b/index.html
@@ -90,11 +90,13 @@
   <section id="like" class="section">    
     <h1><span>give me a like</span></h1>
   </section>
+  <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2FGuillermoVilasOK&width=450&layout=standard&action=like&size=small&share=true&height=35&appId" width="450" height="35" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
 
   <br/><br/><br/>
   <section id="qrcoder" class="section">    
     <h1><span>scan my code</span></h1>
   </section>
+  <img src="myQRcode.png">
 
   <br/><br/><br/>
   <section id="spa" class="section">    
