--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       padding: 0;
       overflow: hidden;
       background-color: cyan;
+      color: black;
       position: fixed;
       top: 0;
       width: 100%;
@@ -30,6 +31,7 @@
       text-align: center;
       padding: 14px 16px;
       border-right: 1px solid white;
+      color: black;
     }
     a {
       display: white;
@@ -39,17 +41,51 @@
     li a:hover {
       display: cyan;
       color: white;
+      background-color: blue;
       text-align: center;
       padding: 14px 16px;
       text-decoration: none;
     }.active {
        background-color: #4CAF50;
     }
+    body {font-family: Arial, Helvetica, sans-serif;}
+  * {box-sizing: border-box;}
+
+  input[type=text], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+  }
+
+  input[type=submit] {
+    background-color: cyan;
+    color: black;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+
+  input[type=submit]:hover {
+    background-color: blue;
+    color: white
+  }
+
+  .container {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+  }
     </style>
 </head>
 <body>
   <div id="menu">
-    <img width="65" height="65" src="https://cdnmd.lavoz.com.ar/sites/default/files/styles/box_128/public/nota_periodistica/guillermo-vilas3jpg_1603972670.jpg">
+    <img width="65" height="65" class="logo-image" src="https://cdnmd.lavoz.com.ar/sites/default/files/styles/box_128/public/nota_periodistica/guillermo-vilas3jpg_1603972670.jpg">
     <ul>
       <li><a href="#contact">Contact Me</a></li>
       <li><a href="#spa">Q&A</a></li>
@@ -60,7 +96,8 @@
       <li><a href="#about">About Me</a></li>        
     </ul>
   </div>
-		  
+	
+  <br/><br/><br/>
   <section id="about" class="section">    
     <h1><span>About Me</span></h1>
     <p class="aboutClass">Guillermo Vilas born 17 August 1952, is an Argentine former professional tennis player, who won four Grand Slam tournaments, one year-end Masters, nine Grand Prix Super Series titles and 62 total ATP titles.
@@ -74,29 +111,35 @@
   <section id="photos" class="section">    
     <h1><span>photos</span></h1>
   </section>
+  <center>
   <img width="200" height="150" src="https://www.tennisworldusa.org/imgb/91848/tennis-legend-guillermo-vilas-reported-to-be-suffering-from-alzheimer-s-disease.jpg">
   <img width="200" height="150" src="https://i1.wp.com/dl.img-news.com/dl/img/s4/dl/2020/05/Nadal-and-a-fundamental-advice-from-Guillermo-Vilas-before-his.img.jpeg?fit=%2C&ssl=1">
   <img width="200" height="150" src="https://www.onthisday.com/images/people/guillermo-vilas-medium.jpg">
   <img width="200" height="150" src="https://i.pinimg.com/originals/cc/f8/34/ccf834b1b0b04a17816aab789a43b933.jpg">
   <img width="200" height="150" src="https://i2.wp.com/d35hsl9am8s2ta.cloudfront.net/public/images/2021/01/16100483510-vilas-773x458.png?w=800&resize=800%2C&ssl=1">
+  </center>
 
   <br/><br/><br/>
   <section id="highlights" class="section">    
     <h1><span>my Highlights</span></h1>
   </section>
+  <center>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/x-EqoIZ1MrE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </center>
 
   <br/><br/><br/>
   <section id="like" class="section">    
     <h1><span>give me a like</span></h1>
   </section>
+  <center>
   <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2FGuillermoVilasOK&width=450&layout=standard&action=like&size=small&share=true&height=35&appId" width="450" height="35" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+  </center>
 
   <br/><br/><br/>
   <section id="qrcoder" class="section">    
     <h1><span>scan my code</span></h1>
   </section>
-  <img src="myQRcode.png">
+  <center><img src="myQRcode.png"></center>
 
   <br/><br/><br/>
   <section id="spa" class="section">    
@@ -107,7 +150,24 @@
   <section id="contact" class="section">    
     <h1><span>contact me</span></h1>
   </section>
-  <br/><br/><br/>
+
+  <div class="container">
+    <form action="mailto:tomerai@post.bgu.ac.il">
+      <label for="name">Name</label>
+      <input type="text" id="name" name="name" placeholder="Your name...">
+
+      <label for="mail">Mail</label>
+      <input type="text" id="mail" name="mail" placeholder="Your mail...">
+
+      <label for="subject">Subject</label>
+      <textarea type="text" id="subject" name="subject" placeholder="Write something.."></textarea>
+      
+      <label for="body">Content</label>
+      <textarea type="text" id="body" name="body" placeholder="Write something.." style="height:200px"></textarea>
+
+      <input type="submit" value="Submit">
+    </form>
+  </div>
 
 <script type="text/javascript">
 $(function(){
