Three differences between web1, web2 and web3

--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
       padding: 14px;
       text-decoration: none;
     }
+    .tableStyle{
+      text-align:center;
+      vertical-align:middle
+    }
     body {font-family: Arial, Helvetica, sans-serif;}
   * {box-sizing: border-box;}
 
@@ -88,11 +92,11 @@
     </style>
 </head>
 <body>
-  <div id="menu">
+  <div id="menu" class="NavigationBar">
     <img width="65" height="65" class="logo-image" src="https://cdnmd.lavoz.com.ar/sites/default/files/styles/box_128/public/nota_periodistica/guillermo-vilas3jpg_1603972670.jpg">
-    <ul class="NavigationBar">
+    <ul>
       <li><a href="#contact">Contact Me</a></li>
-      <li><a href="#spa">Q&A</a></li>
+      <li><a href="#Q&A">Q&A</a></li>
       <li><a href="#qrcoder">QR code</a></li>
       <li><a href="#like">Like</a></li>
       <li><a href="#highlights">My Highlights</a></li>
@@ -101,7 +105,7 @@
     </ul>
   </div>
 	
-  <br/><br/><br/>
+  <br/><br/><br/><br/><br/>
   <section id="about" class="section">    
     <h1><span>About Me</span></h1>
     <p class="aboutClass">Guillermo Vilas born 17 August 1952 (age 68), is an Argentine former professional tennis player, who won four Grand Slam tournaments, one year-end Masters, nine Grand Prix Super Series titles and 62 total ATP titles.
@@ -146,8 +150,33 @@
   <center><img src="myQRcode.png"></center>
 
   <br/><br/><br/>
-  <section id="spa" class="section">    
+  <section id="Q&A" class="section">    
     <h1><span>ans</span></h1>
+    <br>
+    <center><h3>Three differences between web1, web2 and web3</h3></center>
+      <table border="1" align=center cellpadding=10 cellspacing="0" bordercolor="#111111" width="100%">
+        <tr>          
+          <td class="tableStyle"><h2><u>Web1</u></h2></td>
+          <td class="tableStyle"><h2><u>web2</u></h2></td>
+          <td class="tableStyle"><h2><u>Web3</u></h2></td>
+        </tr>
+        <tr>
+          <td class="tableStyle"><b>the web is Read-Only and static.</b></td>
+          <td class="tableStyle"><b>the web is wildly Read-Write.</b></td>
+          <td class="tableStyle"><b>the web is portable and personal - Read-Write intelligent web.</b></td>
+        </tr>
+        <tr>
+          <td><b>search engines retrieve macro contents. Search is very fast but many times results are inaccurate or more than users can chew.</b></td>
+          <td><b>search engines retrieve tags with micro contents. The process of tagging is manual, tedious and covers negligible percents of the WWW.</b></td>
+          <td><b>search engines will retrieve micro content texts which were tagged automatically.This implies translating billions of Web 1.0 macro contents into micro contents. The result could be more precise search because tagging can solve part of the ambiguity that homonyms and synonyms introduce into the process of Search.
+          </b></td>
+        </tr>
+        <tr>
+          <td><b>Companies publish content that people consume (e.g. Ynet)</b></td>
+          <td><b>People publish content that other people can consume, companies build platforms that let people publish content for other people (e.g. YouTube, Wikipedia)</b></td>
+          <td><b>People build applications that people can interact with, companies build platforms that let people publish services by leveraging the associations between people or special content ( e. g. Facebook, Instagram)</b></td>
+        </tr>
+      </table>
   </section>
 
   <br/><br/><br/>
